test: 수익률 정상 출력 테스트 추가